# hermes

./: .gitignore  CITATION.cff  HERMES.py  HERMESGUI.ui  HERMESMAC_Enviroment.yml  HERMESWINDOWS_Enviroment.yml  HERMES_Enviroment.yml  HERMES_linux.yml  LICENSE  README.md  README_MPI  check_tiff.py  directionPorosityPlotting.py  environment.yml  gmsh_read.py  hermes_mpi.yml  parallel_vox2stl.py  propertyFile.txt  pytest.ini  removeFloatingIslands.py  stl2surf.py  voxel2stl.py  voxel2stl_mpi.py
docs/: TEST_CATALOG.md  examples.md  features.md  installation.md  legacy-mpi-notes.md  mpi.md  quickstart.md  testing.md  usage.md
hermes/: __init__.py  __main__.py  api.py  centerlines.py  cli.py  directional_porosity.py  gui.py  gui_adapter.py  io.py  legacy_serial.py  mesh.py  mpi.py  pipeline.py  properties.py  property_table.py  sampling.py  segmentation.py  serial.py  workflow.py  workspace.py
hermes_core/: pyproject.toml  testNewArcitecture.py  testNewNotebook.ipynb
hermes_core/.ipynb_checkpoints/: testNewArcitecture-checkpoint.py  testNewNotebook-checkpoint.ipynb
hermes_core/src/hermes_core/: workspace.py
hermes_core/src/hermes_core/.ipynb_checkpoints/: workspace-checkpoint.py
hermes_core/utilities/: directionPorosityPlotting.py
scripts/: make_test_fixtures.py
speedup/: speedup.lay
tests/: __init__.py  conftest.py  helpers.py  test_config_runner.py  test_directional_porosity_analytical.py  test_gui_adapter.py  test_gui_contract.py  test_io_and_mesh.py  test_mesh_cleanup_and_outputs.py  test_mpi_contract.py  test_pipeline_serial_analytical.py  (+8 more)
(+17 files in other folders)
